# StoreSalesPrediction

./: .gitattributes  .gitignore  README.md  __main__.py  pyproject.toml
.streamlit/: config.toml
StoreSalesPrediction/: data_ingestion.py  data_processing_utilities.py  model_evaluation.py  model_training.py  predictions_visualization.py  store_model_pipeline.py
cli/: __init__.py  main.py  make_predictions.py  plot.py  train.py
models/: store_sales_model.pkl  user_model.pkl
notebooks/: 01-Exploratory_Data_Analysis.ipynb
store_sales_prediction/: data_ingestion.py  data_processing.py  data_processing_pipeline.py  data_processing_utilities.py  data_reading.py  db_utilities.py  model_evaluation.py  model_training.py  predictions_visualization.py  sales_future_predictions.py  store_model_future_predictions_utilities.py  store_model_pipeline.py  test.py
streamlit_app/: app.py  data_overview.py  exploratory_data_analysis.py  feature_engineering_and_data_processing.py  introduction.py  model_training_and_evaluation.py  predictions_and_insights.py  sidebar_controls.py
streamlit_app/.streamlit/: config.toml
typer_app/: app.py  functions.py  main.py
