[tool.poetry]
name = "store_sales_prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"
pandas = "^2.2.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.1.post1"
streamlit = "^1.32.0"
xgboost = "^2.0.3"
joblib = "^1.3.2"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
store_sales_prediction = "store_sales_prediction.__main__:app"